fixing the off-centered seek button images

--- a/src/scss/3-layout/_homepage.scss
+++ b/src/scss/3-layout/_homepage.scss
@@ -187,7 +187,7 @@ nav.c-logo {
     height: 32px;
   }
 
-  .seek-button--left img {
+  .seek-button--right img {
     transform: rotate(180deg);
     transform-origin: center;
   }
